--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
   thymeleaf:
     cache: false
 
-jpa:
-  database-platform: org.hibernate.dialect.MySQLDialect
-  open-in-view: false
-  show-sql: true
-  hibernate:
-    ddl-auto: create
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: update
