--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8083
+  servlet:
+    session:
+      cookie:
+        name: JSESSIONID
+      tracking-modes: COOKIE
 
 spring:
   application:
