--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,11 @@ spring:
     password: 1234
   thymeleaf:
     cache: false
-
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     open-in-view: false
     show-sql: true
     hibernate:
       ddl-auto: update
+  mvc:
+    static-path-pattern: /resources/**
